<resources>
    <string name="app_name">Location tracker</string>
    <string name="sign_in">SIGN IN</string>
    <string name="user_name">User name</string>
    <string name="password">Password</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="sign_up"><u>Sign Up</u></string>
    <string name="sign_up_text">SIGN UP</string>
    <string name="e_mail">E-mail</string>
    <string name="success_registration">User has been created successfully!</string>
    <string name="email_required">E-mail is required!</string>
    <string name="provide_valid_email">Please provide valid email!</string>
    <string name="password_required">Password is required!</string>
    <string name="min_8_characters">Minimum 8 characters</string>
    <string name="username_required">User Name is required!</string>
    <string name="fail_register">Fail to register! Try again!</string>
    <string name="fail_register_a">Fail to register!</string>
    <string name="fail_login">Failed to Login!</string>
</resources>
