<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login_activity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/holo_blue_light"
    tools:context=".base.BaseLoginActivity">

    <View
        android:id="@+id/sign_in_form"
        android:layout_width="match_parent"
        android:layout_height="450dp"
        android:layout_marginHorizontal="20dp"
        android:background="@drawable/form_background"
        android:elevation="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/sign_in_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/horizontal_margin"
        android:layout_marginTop="50dp"
        android:text="@string/sign_in"
        android:textColor="@color/black"
        android:textSize="@dimen/sing_in_title_size"
        android:textStyle="bold"
        android:elevation="15dp"
        app:layout_constraintStart_toStartOf="@+id/sign_in_form"
        app:layout_constraintTop_toTopOf="@+id/sign_in_form" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_layout_email"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/horizontal_margin"
        android:layout_marginTop="0dp"
        android:elevation="15dp"
        android:textColorHint="@android:color/darker_gray"
        app:boxStrokeColor="@android:color/holo_blue_dark"
        app:hintTextColor="@android:color/holo_blue_dark"
        app:layout_constraintBottom_toTopOf="@id/input_layout_password"
        app:layout_constraintEnd_toEndOf="@+id/sign_in_form"
        app:layout_constraintStart_toStartOf="@+id/sign_in_form"
        app:layout_constraintTop_toBottomOf="@id/sign_in_text">

        <EditText
            android:id="@+id/type_email"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:hint="@string/e_mail"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:paddingHorizontal="@dimen/input_text_padding"
            android:textColor="@color/black"
            android:textColorHint="@android:color/darker_gray"
            tools:ignore="SpeakableTextPresentCheck" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_layout_password"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/horizontal_margin"
        android:layout_marginTop="50dp"
        android:elevation="15dp"
        android:textColorHint="@android:color/darker_gray"
        app:boxStrokeColor="@android:color/holo_blue_dark"
        app:hintTextColor="@android:color/holo_blue_dark"
        app:layout_constraintBottom_toTopOf="@+id/sign_in_button"
        app:layout_constraintEnd_toEndOf="@+id/sign_in_form"
        app:layout_constraintStart_toStartOf="@+id/sign_in_form"
        app:layout_constraintTop_toBottomOf="@id/sign_in_text"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@android:color/darker_gray">

        <EditText
            android:id="@+id/type_password"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:maxLines="1"
            android:paddingHorizontal="@dimen/input_text_padding"
            android:textColor="@color/black"
            android:textColorHint="@android:color/darker_gray"
            tools:ignore="SpeakableTextPresentCheck" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/forgot_password"
        android:textColor="@android:color/holo_blue_light"
        android:elevation="15dp"
        android:textSize="@dimen/default_singin_textsize"
        app:layout_constraintEnd_toEndOf="@id/input_layout_password"
        app:layout_constraintTop_toBottomOf="@id/input_layout_password" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/sign_in_button"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginHorizontal="@dimen/horizontal_margin"
        android:layout_marginBottom="50dp"
        android:background="@drawable/button_background"
        android:elevation="15dp"
        android:gravity="center"
        android:enabled="false"
        android:text="@string/sign_in"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/sign_in_form"
        app:layout_constraintEnd_toEndOf="@+id/sign_in_form"
        app:layout_constraintStart_toStartOf="@+id/sign_in_form" />


    <TextView
        android:id="@+id/dont_have_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginTop="50dp"
        android:text="@string/don_t_have_an_account"
        android:textColor="@color/white"
        android:textSize="@dimen/default_singin_textsize"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sign_in_form" />

    <TextView
        android:id="@+id/sign_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:text="@string/sign_up"
        android:textColor="@color/white"
        android:textSize="@dimen/default_singin_textsize"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/dont_have_account"
        app:layout_constraintStart_toEndOf="@id/dont_have_account" />

    <ProgressBar
        android:id="@+id/sign_in_progressBar"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:elevation="16dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>
