<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/sign_up_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/holo_blue_light">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/sign_up_form"
        android:layout_width="match_parent"
        android:layout_height="450dp"
        android:layout_marginHorizontal="20dp"
        android:background="@drawable/form_background"
        android:elevation="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/sign_up_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/horizontal_margin"
            android:layout_marginTop="50dp"
            android:text="@string/sign_up_text"
            android:textColor="@color/black"
            android:textSize="@dimen/sing_in_title_size"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_layout_new_name"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/horizontal_margin"
            android:layout_marginTop="150dp"
            android:textColorHint="@android:color/darker_gray"
            app:boxStrokeColor="@android:color/holo_blue_dark"
            app:hintTextColor="@android:color/holo_blue_dark"
            app:layout_constraintBottom_toTopOf="@id/sign_up_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/sign_up_text">

            <EditText
                android:id="@+id/type_new_username"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:hint="@string/user_name"
                android:inputType="text"
                android:maxLines="1"
                android:paddingHorizontal="@dimen/input_text_padding"
                android:textColor="@color/black"
                android:textColorHint="@android:color/darker_gray" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_layout_new_password"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/horizontal_margin"
            android:layout_marginTop="80dp"
            android:textColorHint="@android:color/darker_gray"
            app:boxStrokeColor="@android:color/holo_blue_dark"
            app:hintTextColor="@android:color/holo_blue_dark"
            app:layout_constraintBottom_toTopOf="@id/input_layout_new_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/sign_up_text"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@android:color/darker_gray">

            <EditText
                android:id="@+id/type_new_password"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:maxLines="1"
                android:paddingHorizontal="@dimen/input_text_padding"
                android:textColor="@color/black"
                android:textColorHint="@android:color/darker_gray" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_layout_new_email"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/horizontal_margin"
            android:textColorHint="@android:color/darker_gray"
            app:boxStrokeColor="@android:color/holo_blue_dark"
            app:hintTextColor="@android:color/holo_blue_dark"
            app:layout_constraintBottom_toTopOf="@id/input_layout_new_password"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/sign_up_text">

            <EditText
                android:id="@+id/type_new_email"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:hint="@string/e_mail"
                android:maxLines="1"
                android:paddingHorizontal="@dimen/input_text_padding"
                android:textColor="@color/black"
                android:textColorHint="@android:color/darker_gray" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/sign_up_button"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginHorizontal="@dimen/horizontal_margin"
            android:layout_marginBottom="50dp"
            android:background="@drawable/button_background"
            android:elevation="-1dp"
            android:enabled="true"
            android:stateListAnimator="@null"
            android:text="@string/sign_up_text"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ProgressBar
        android:id="@+id/sign_up_progressBar"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:elevation="16dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>
